--- a/Redaction/Beamer/TweetEmbedding_slides.tex
+++ b/Redaction/Beamer/TweetEmbedding_slides.tex
@@ -214,10 +214,10 @@ itérativement à jour deux matrices \(W_e\) et \(W_s\). Représentation
 vectorielle finale : \[
 \frac{W_e+W_s}{2}=\underbrace{
 \begin{pmatrix}
-\text{représentation mot 1} \\
+\text{représentation mot 1} \\ \vdots
 \\
 \text{représentation mot }n 
-\end{pmatrix}}_{\text{dimension : }n\times dim}
+\end{pmatrix}}_{\text{dimension }[n\times dim]}
 \] \pause Pour chaque phrase on :
 
 \begin{itemize}
