--- a/Redaction/Beamer/TweetEmbedding_slides.Rmd
+++ b/Redaction/Beamer/TweetEmbedding_slides.Rmd
@@ -124,10 +124,10 @@ Voisins(\texttt{passe}) =  \texttt{[Teams,\ se,\ bien]}
 $$
 \frac{W_e+W_s}{2}=\underbrace{
 \begin{pmatrix}
-\text{représentation mot 1} \\
+\text{représentation mot 1} \\ \vdots
 \\
 \text{représentation mot }n 
-\end{pmatrix}}_{\text{dimension : }n\times dim}
+\end{pmatrix}}_{\text{dimension }[n\times dim]}
 $$
 \pause
 Pour chaque phrase on :
